--- a/src/components/LoadingFallback/loadingFallback.module.scss
+++ b/src/components/LoadingFallback/loadingFallback.module.scss
@@ -6,5 +6,5 @@
   align-items: center;
   justify-content: center;
   font-family: 'Nanum Myeongjo', serif;
-  color: var(--color-dark);
+  color: var(--color-text1);
 }
