--- a/src/components/ErrorFallback/errorFallback.module.scss
+++ b/src/components/ErrorFallback/errorFallback.module.scss
@@ -6,18 +6,18 @@
   width: 100%;
   height: 100%;
   font-family: 'Nanum Myeongjo', serif;
-  color: var(--color-dark);
+  color: var(--color-text1);
 }
 
 .errorComponentBox {
   @include flexbox.flexbox(center, center);
   width: 100%;
   height: 40%;
-  border: 2px solid var(--color-dark30);
+  border: 2px solid var(--color-border);
 
   svg {
     width: 100px;
-    fill: var(--color-dark50);
+    fill: var(--color-text2);
   }
 }
 
@@ -31,7 +31,7 @@
     margin-bottom: 8px;
     font-size: sizes.$FONT_SMALL;
     font-style: italic;
-    color: var(--color-dark50);
+    color: var(--color-text2);
   }
 
   .errorInfo {
@@ -45,7 +45,7 @@
     overflow: auto;
     line-height: 20px;
     white-space: pre-wrap;
-    border: 1px solid var(--color-dark30);
+    border: 1px solid var(--color-border);
     border-radius: 4px;
   }
 }
