--- a/src/components/Layout/NavSection/navSection.module.scss
+++ b/src/components/Layout/NavSection/navSection.module.scss
@@ -24,11 +24,11 @@
 
     svg {
       height: 20px;
-      fill: var(--color-dark30);
+      fill: var(--color-border);
     }
 
     &:hover {
-      color: var(--color-dark50);
+      color: var(--color-text2);
     }
   }
 }
@@ -40,7 +40,7 @@
     font-family: 'Nanum Myeongjo', serif;
     font-size: sizes.$FONT_SUBTITLE;
     font-weight: 700;
-    color: var(--color-dark);
+    color: var(--color-text1);
     opacity: 0.3;
     transition: opacity 0.2s ease-in;
 
