--- a/src/components/PlayerComponent/playerComponent.module.scss
+++ b/src/components/PlayerComponent/playerComponent.module.scss
@@ -6,7 +6,7 @@
   width: 100%;
   height: 100%;
   font-family: 'Nanum Myeongjo', serif;
-  color: var(--color-dark);
+  color: var(--color-text1);
 }
 
 .playerInformation {
@@ -19,7 +19,7 @@
     margin-bottom: 8px;
     font-size: sizes.$FONT_SMALL;
     font-style: italic;
-    color: var(--color-dark50);
+    color: var(--color-text2);
   }
 
   .playerComment {
@@ -30,7 +30,7 @@
     line-height: 20px;
     white-space: pre-wrap;
     user-select: none;
-    border: 1px solid var(--color-dark30);
+    border: 1px solid var(--color-border);
     border-radius: 4px;
   }
 
@@ -43,11 +43,11 @@
   @include flexbox.flexbox(end, center);
   width: 100%;
   margin: 10px 0;
-  color: var(--color-dark30);
+  color: var(--color-text2);
   user-select: none;
 
   .recommendedName {
-    color: var(--color-dark50);
+    color: var(--color-text2);
   }
 
   .recommendedStr {
