--- a/src/router/Calendar/OverviewCalendar/CalendarHeader/calendarHeader.module.scss
+++ b/src/router/Calendar/OverviewCalendar/CalendarHeader/calendarHeader.module.scss
@@ -9,7 +9,7 @@
 
   button {
     font-size: sizes.$FONT_SUBTITLE;
-    color: var(--color-dark);
+    color: var(--color-text1);
   }
 
   .calendarHeaderButton {
