--- a/src/router/Calendar/OverviewCalendar/CalendarSelectMonth/calendarSelectMonth.module.scss
+++ b/src/router/Calendar/OverviewCalendar/CalendarSelectMonth/calendarSelectMonth.module.scss
@@ -9,10 +9,10 @@
   transition: background-color 0.2s;
 
   &:hover {
-    background-color: var(--color-dark30);
+    background-color: var(--color-secondary2);
   }
 
   &.isSelectedMonth {
-    border: 4px solid var(--color-middle50);
+    border: 4px solid var(--color-border);
   }
 }
