--- a/src/router/Mood/FilteredSongList/filteredSongList.module.scss
+++ b/src/router/Mood/FilteredSongList/filteredSongList.module.scss
@@ -7,14 +7,14 @@
   width: 100%;
   height: calc(100% - 20vh - 32px - 48px);
   overflow: auto;
-  border: 1px solid var(--color-dark50);
+  border: 1px solid var(--color-border);
   border-radius: 4px;
 }
 
 .filteredSongElement {
   width: 100%;
   padding: 12px 16px;
-  border-bottom: 1px solid var(--color-dark30);
+  border-bottom: 1px solid var(--color-border);
 
   &:last-child {
     border-bottom: none;
