style: :lipstick: 달 선택창 글자색 추가

--- a/src/router/Calendar/OverviewCalendar/CalendarSelectMonth/calendarSelectMonth.module.scss
+++ b/src/router/Calendar/OverviewCalendar/CalendarSelectMonth/calendarSelectMonth.module.scss
@@ -7,6 +7,7 @@
 
 .selectMonthButton {
   transition: background-color 0.2s;
+  color: var(--color-text1);
 
   &:hover {
     background-color: var(--color-secondary2);
