--- a/src/router/Calendar/OverviewCalendar/CalendarSelectMonth/calendarSelectMonth.module.scss
+++ b/src/router/Calendar/OverviewCalendar/CalendarSelectMonth/calendarSelectMonth.module.scss
@@ -16,4 +16,13 @@
   &.isSelectedMonth {
     border: 4px solid var(--color-border);
   }
+
+  &.isUnavailable {
+    cursor: default;
+    opacity: 0.3;
+
+    &:hover {
+      background: none;
+    }
+  }
 }
